--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ matplotlib==3.10.1
 pillow==11.1.0
 logging==0.4.9.6
 toml==0.10.2
-
+hamming_code @ git+https://github.com/tamagochka/hamming_code@v0.1.0
