completly realization HOGO

--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,4 @@ covers_folder = 'assets/covers'
 stegos_folder = 'assets/stegos'
 messages_folder = 'assets/messages'
 analysis_folder = 'assets/analysis'
+keys_folder = 'assets/keys'
